@@ -1,17 +1,15 @@
 # Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
-
 sudo: required
-
 dist: trusty
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  ## PPA for Rcpp and some other packages
-  - sudo add-apt-repository -y ppa:edd/misc
+  # add our launchpad repo which has (inter alia) r-cran-pinp
+  - sudo add-apt-repository -y ppa:edd/r-3.5
   - ./run.sh bootstrap
-
+ 
 install:
   - ./run.sh install_aptget libgsl0-dev r-cran-rcppgsl r-cran-rbenchmark r-cran-microbenchmark r-cran-pinp
   
