@@ -13,6 +13,10 @@
 
 	* inst/NEWS.Rd: Updated
 
+2018-09-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch Travis CI to R 3.5 repo
+
 2018-08-17  Blagoje Ivanovic  <blagoje.r.ivanovic@gmail.com>
 
 	* vignettes/RcppZiggurat.Rmd: Correct several typos
